--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7c40008",
+   "id": "d642b098",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be2f2352",
+   "id": "0460fe69",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "680da49f",
+   "id": "e7b3dcb0",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9faf94a4",
+   "id": "d9d70733",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c8365304",
+   "id": "a5fb0f59",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b7f128b2",
+   "id": "2a5fbb21",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "84b0cbe5",
+   "id": "c99fc681",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a97a9713",
+   "id": "700ee7d5",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2efe7ed",
+   "id": "6281a8d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ece8b0",
+   "id": "a5728046",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1fe90792",
+   "id": "11428424",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "649e0f4e",
+   "id": "5bd21c9a",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4177fa44",
+   "id": "d2ea86b1",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7f8251fd",
+   "id": "301b731c",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe962b8",
+   "id": "1b5772f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "c769d637",
+   "execution_count": 123,
+   "id": "86c7d535",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
      "output_type": "stream",
      "text": [
       "Enter a word: computer\n",
-      "omputercway\n"
+      "omputercay\n"
      ]
     }
    ],
@@ -326,15 +326,15 @@
     "firstletter = word[0]\n",
     "\n",
     "if str(firstletter) == \"a\" or str(firstletter) ==\"e\" or str(firstletter) ==\"i\" or str(firstletter) ==\"u\":\n",
-    "    print(f\"{word}ay\")    \n",
+    "    print(f\"{word}way\")    \n",
     "else:\n",
-    "    print(f\"{word[-(len(word)-1):]}{firstletter}way\")"
+    "    print(f\"{word[-(len(word)-1):]}{firstletter}ay\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a9c888",
+   "id": "917002ce",
    "metadata": {},
    "outputs": [],
    "source": []
