--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e04e92e",
+   "id": "fbb29611",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c214e9d0",
+   "id": "ed3016d0",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58acb823",
+   "id": "cdc5de56",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9ff236",
+   "id": "1c5c1a28",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8e1713d",
+   "id": "16429252",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5af55b3c",
+   "id": "5d345901",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7fa141bb",
+   "id": "94a5682d",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bf9054c1",
+   "id": "93993fd7",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5cda8e68",
+   "id": "37796aeb",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a582a701",
+   "id": "cb5a1d63",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "1481e8f4",
+   "id": "d68be19e",
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +243,7 @@
    "source": [
     "txt1 = input('enter the word : ')\n",
     "if txt1[0] == 'a' or txt1[0] == 'e' or txt1[0] == 'i' or txt1[0] == 'o' or txt1[0] == 'u' :\n",
+    "# if txt1[0] in ()\n",
     "    txt1 = txt1 + 'way'\n",
     "else :\n",
     "    txt1 = txt1[1:len(txt1)]+txt1[0]+'ay'\n",
@@ -252,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e6206e",
+   "id": "62bf27c3",
    "metadata": {},
    "outputs": [],
    "source": [
