--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d1fae739",
+   "id": "ef01e073",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a780e178",
+   "id": "639f561a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a6de4f3e",
+   "id": "fb7fbd4b",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8d51f3b7",
+   "id": "cb128323",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "0a01a50f",
+   "id": "1ae2efd5",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "7d40fe15",
+   "id": "598c92b2",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "27c5dbbe",
+   "id": "a7254855",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7fc3b204",
+   "id": "d3536457",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "b0251bb1",
+   "id": "573cce89",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4b8574f8",
+   "id": "1e8067f4",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "56707188",
+   "id": "ba859b31",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "991965be",
+   "id": "b0efa4c8",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3f6f281e",
+   "id": "b5712a67",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "d9366fcd",
+   "id": "c7ab0339",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "c834688b",
+   "id": "030ece21",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "08d5b488",
+   "id": "24cba037",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "dd52fd0a",
+   "id": "af4f4aca",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "d9d5a923",
+   "id": "cbfa435c",
    "metadata": {},
    "outputs": [
     {
@@ -722,15 +722,15 @@
    ],
    "source": [
     "s = 'abcdefghijklmnopqrstuvwxyz'\n",
-    "user = input('Enter a string: ')\n",
-    "if \n",
+    "user_input = input('Enter a string: ')\n",
+    "if user_input[0] == 'a'\n",
     "print ('s1 += \\'way\\'')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee6b609",
+   "id": "eb8b4fc1",
    "metadata": {},
    "outputs": [],
    "source": []
