--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9bb104d0",
+   "id": "7eecfc46",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "58dce1aa",
+   "id": "ef3d8dc1",
    "metadata": {},
    "outputs": [
     {
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "17f13f64",
+   "execution_count": 59,
+   "id": "65efb6ce",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a word: how\n",
-      "Your word in Pig latim would be: owhay\n"
+      "Write a word: orange\n",
+      "Your word in Pig latim would be: rangeoay\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b748d541",
+   "id": "f9d28602",
    "metadata": {},
    "outputs": [],
    "source": []
