--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "651d09e5",
+   "id": "227cf926",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0807fd57",
+   "id": "d7dcb8ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4236950a",
+   "id": "3699fc49",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0d195e2b",
+   "id": "088d1012",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9b9903f0",
+   "id": "57e6baf8",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f39cf3e",
+   "id": "b6c2191f",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f75c1cad",
+   "id": "8cff345e",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "67f1e5c8",
+   "id": "131930c8",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "04c49099",
+   "id": "6655c2d9",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "203dc879",
+   "id": "4ce85577",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a864d12",
+   "id": "ba4f945f",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7426cfb4",
+   "id": "4330cf54",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1dc22375",
+   "id": "0eb7b1b9",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "337335a5",
+   "id": "73896060",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "aa551c04",
+   "id": "48b05b4d",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "65ac00e3",
+   "id": "5c80e33d",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "dd5fe2b5",
+   "id": "3ea6c086",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5c07d96e",
+   "id": "fa05ac44",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "248c7d3e",
+   "id": "c867150a",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ff132b72",
+   "id": "6cda6e96",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7784b695",
+   "id": "420942b4",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1f9b41f1",
+   "id": "b87ad0b6",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c499c127",
+   "id": "6d2cb590",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "76d7f517",
+   "id": "17068071",
    "metadata": {},
    "outputs": [
     {
@@ -531,8 +531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "ddcba3eb",
+   "execution_count": 95,
+   "id": "60b187e8",
    "metadata": {},
    "outputs": [
     {
@@ -540,23 +540,23 @@
      "output_type": "stream",
      "text": [
       "Write your favourite word: opaque\n",
-      "paqueoay\n"
+      "opaqueway\n"
      ]
     }
    ],
    "source": [
     "word=input('Write your favourite word: ')\n",
     "\n",
-    "if word[0]is int:\n",
+    "if word[0]in 'aeiou':\n",
     "    print(word+'way')\n",
-    "elif word[0] is not int:\n",
+    "else:\n",
     "    print (word[-(len(word)-1):len(word)]+ word[0]+'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff14d6c1",
+   "id": "09b43506",
    "metadata": {},
    "outputs": [],
    "source": []
