--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "828fe58d",
+   "id": "fc5b8bbc",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5e56abdb",
+   "id": "b0cf6a14",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a6a5f887",
+   "id": "39b19af4",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eed50d1b",
+   "id": "636c2c6e",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "23aa494e",
+   "id": "009de5a7",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f73ac3dd",
+   "id": "7cb46444",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5c74d51d",
+   "id": "ff311b98",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0a893df7",
+   "id": "95be1317",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "929ab992",
+   "id": "70925de4",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f24979af",
+   "id": "cdd1680c",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "015c3c8c",
+   "id": "3520d04d",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3b25d49e",
+   "id": "46013609",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4b867fb3",
+   "id": "223d19cb",
    "metadata": {},
    "outputs": [
     {
@@ -316,10 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd9ed6b6",
+   "execution_count": 72,
+   "id": "ffd031be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write a word to be translatedZEWVBRA\n",
+      "ZEWVBRAway\n"
+     ]
+    }
+   ],
    "source": [
     "word=input(\"Write a word to be translated\")\n",
     "if word[0]==\"a\" or \"e\" or \"i\" or \"o\" or \"u\":\n",
@@ -333,10 +342,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57784914",
+   "id": "2a41f100",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word= input(\"Enter a word: \")"
+   ]
   }
  ],
  "metadata": {
