--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee7165af",
+   "id": "9293d10d",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28ba3bf4",
+   "id": "d3966820",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eaabf628",
+   "id": "96611169",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0410e30d",
+   "id": "80ab7844",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad404968",
+   "id": "c32837aa",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "773e5e7c",
+   "id": "9c05a649",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b7434196",
+   "id": "42d646f7",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aa13ecf8",
+   "id": "4a03bc45",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a4a0f95f",
+   "id": "ff73d83e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6bb8cfb9",
+   "id": "ec66251f",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9620d530",
+   "id": "ed2bbd58",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c76afb72",
+   "id": "c6194132",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1d7a7e3f",
+   "id": "64bc972d",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "592a58ae",
+   "id": "7e4e0ada",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c4707f",
+   "id": "9b2ef148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c33851f7",
+   "id": "08b2a3a4",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f35f309e",
+   "id": "2990ae15",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a50f3871",
+   "id": "4010b847",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2d05d8d1",
+   "id": "81305d06",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f970e210",
+   "id": "0ad2ba67",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4b742329",
+   "id": "6aa3a6f8",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "358c50e3",
+   "id": "185c2112",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c8cb9732",
+   "id": "1ceb5121",
    "metadata": {},
    "outputs": [
     {
@@ -469,12 +469,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48595f97",
+   "id": "a8ca7b7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "word = input('Enter a word: ')\n",
-    "#if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] == 'o'\n"
+    "#if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] == 'o'\n",
+    "if word[0] in 'aeiou' :\n",
+    "    "
    ]
   }
  ],
