--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e7d5c64b",
+   "id": "b6d1935b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c73de895",
+   "id": "587e2275",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ff3e3a0",
+   "id": "15d4ac8b",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8a3309",
+   "id": "35d44895",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4d9e9e8",
+   "id": "c8b363d7",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e82b1413",
+   "id": "cf4f397f",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a3e6c805",
+   "id": "c46534d9",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d6415243",
+   "id": "4f3e0c32",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "af8fde21",
+   "id": "3cd31685",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b949c1cb",
+   "id": "367dc99d",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9a2133d1",
+   "id": "57328004",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1ba717da",
+   "id": "04d644b3",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ee32035d",
+   "id": "68af7f83",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "aae1dab1",
+   "id": "7fdc6b9f",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "48ba4a00",
+   "id": "3ad7d772",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1bc73083",
+   "id": "b7019e4d",
    "metadata": {},
    "outputs": [
     {
@@ -360,23 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "7c4b01fb",
+   "execution_count": 95,
+   "id": "69fab116",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: kidney\n",
-      "idneyay\n"
+      "Enter a word: kilo\n",
+      "iloay\n"
      ]
     }
    ],
    "source": [
     "w = input('Enter a word: ')\n",
-    "#or w[0]=='i' or w[0]=='o' oe w[0]=='u')\n",
-    "if w[0] == 'a' or w[0] == 'e' or w[0]=='i'or w[0]=='o' or w[0]=='u':\n",
+    "\n",
+    "if w[0] in 'aeiou':\n",
     "    \n",
     "    print(w+'way')\n",
     "else:\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59836a1b",
+   "id": "daf529ad",
    "metadata": {},
    "outputs": [],
    "source": []
