--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d642b098",
+   "id": "598d38a4",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0460fe69",
+   "id": "6318af6b",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7b3dcb0",
+   "id": "8fd0157c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9d70733",
+   "id": "10b0b328",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a5fb0f59",
+   "id": "caac7b58",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a5fbb21",
+   "id": "7d5399a7",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c99fc681",
+   "id": "0a48d432",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "700ee7d5",
+   "id": "0b560317",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6281a8d2",
+   "id": "f6a9b62b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5728046",
+   "id": "b60eb283",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "11428424",
+   "id": "cdef938d",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5bd21c9a",
+   "id": "5f5a5d51",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d2ea86b1",
+   "id": "6f20fc99",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "301b731c",
+   "id": "230bea82",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b5772f5",
+   "id": "6863fdd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "86c7d535",
+   "execution_count": 127,
+   "id": "d76ef6ac",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: computer\n",
-      "omputercay\n"
+      "Enter a word: word\n",
+      "ordway\n"
      ]
     }
    ],
@@ -325,8 +325,8 @@
     "word = input(\"Enter a word: \")\n",
     "firstletter = word[0]\n",
     "\n",
-    "if str(firstletter) == \"a\" or str(firstletter) ==\"e\" or str(firstletter) ==\"i\" or str(firstletter) ==\"u\":\n",
-    "    print(f\"{word}way\")    \n",
+    "if firstletter in \"aeiou\":\n",
+    "    print(word + way)    \n",
     "else:\n",
     "    print(f\"{word[-(len(word)-1):]}{firstletter}ay\")"
    ]
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "917002ce",
+   "id": "c0b340ba",
    "metadata": {},
    "outputs": [],
    "source": []
