--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fbb29611",
+   "id": "e5bae1a8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed3016d0",
+   "id": "bd28a589",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdc5de56",
+   "id": "ac498c91",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c5c1a28",
+   "id": "c49873f8",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "16429252",
+   "id": "aad3699b",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5d345901",
+   "id": "bccf3540",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "94a5682d",
+   "id": "e0eac5f9",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "93993fd7",
+   "id": "45775a70",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "37796aeb",
+   "id": "3677b147",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cb5a1d63",
+   "id": "832d9529",
    "metadata": {},
    "outputs": [
     {
@@ -227,23 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "d68be19e",
+   "execution_count": 71,
+   "id": "c214de9f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the word : pineapple\n",
-      "ineapplepay\n"
+      "enter the word : yrange\n",
+      "rangeyay\n"
      ]
     }
    ],
    "source": [
     "txt1 = input('enter the word : ')\n",
-    "if txt1[0] == 'a' or txt1[0] == 'e' or txt1[0] == 'i' or txt1[0] == 'o' or txt1[0] == 'u' :\n",
-    "# if txt1[0] in ()\n",
+    "# if txt1[0] == 'a' or txt1[0] == 'e' or txt1[0] == 'i' or txt1[0] == 'o' or txt1[0] == 'u' :\n",
+    "if txt1[0] in 'aeiou' :\n",
     "    txt1 = txt1 + 'way'\n",
     "else :\n",
     "    txt1 = txt1[1:len(txt1)]+txt1[0]+'ay'\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62bf27c3",
+   "id": "7a281daa",
    "metadata": {},
    "outputs": [],
    "source": [
