--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7eecfc46",
+   "id": "c8f8b66e",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ef3d8dc1",
+   "id": "51206e98",
    "metadata": {},
    "outputs": [
     {
@@ -205,8 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "65efb6ce",
+   "execution_count": 60,
+   "id": "9c4b3fff",
    "metadata": {},
    "outputs": [
     {
@@ -214,13 +214,13 @@
      "output_type": "stream",
      "text": [
       "Write a word: orange\n",
-      "Your word in Pig latim would be: rangeoay\n"
+      "Your word in Pig latim would be: orangeway\n"
      ]
     }
    ],
    "source": [
     "s = input('Write a word: ')\n",
-    "if s[0] == 'aeiou':\n",
+    "if s[0] in 'aeiou':\n",
     "    s += 'way'\n",
     "    print(f'Your word in Pig latim would be: {s}')\n",
     "else:\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9d28602",
+   "id": "8d3adb16",
    "metadata": {},
    "outputs": [],
    "source": []
