--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc5b8bbc",
+   "id": "a942a491",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b0cf6a14",
+   "id": "da005445",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "39b19af4",
+   "id": "d41a3116",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "636c2c6e",
+   "id": "3cbd973d",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "009de5a7",
+   "id": "769a1b23",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7cb46444",
+   "id": "3b1aab34",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ff311b98",
+   "id": "416e577e",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "95be1317",
+   "id": "ca6e7c07",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "70925de4",
+   "id": "ae74fb80",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "cdd1680c",
+   "id": "187dde80",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3520d04d",
+   "id": "335e2833",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "46013609",
+   "id": "e5442e07",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "223d19cb",
+   "id": "6c7b0905",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ffd031be",
+   "id": "1c147e7f",
    "metadata": {},
    "outputs": [
     {
@@ -342,11 +342,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a41f100",
+   "id": "7ac2420c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "word= input(\"Enter a word: \")"
+    "word= input(\"Enter a word: \")\n",
+    "if word[0]= in \"aeiou\""
    ]
   }
  ],
