--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b6d1935b",
+   "id": "f59cc77a",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "587e2275",
+   "id": "fab714e6",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d4ac8b",
+   "id": "ee10e763",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d44895",
+   "id": "16c46a70",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8b363d7",
+   "id": "b1ff7280",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cf4f397f",
+   "id": "3c556e2a",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c46534d9",
+   "id": "f018d720",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4f3e0c32",
+   "id": "8b4583e9",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3cd31685",
+   "id": "acbf075f",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "367dc99d",
+   "id": "e56e876d",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "57328004",
+   "id": "5b9bb499",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "04d644b3",
+   "id": "a93f2cfe",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "68af7f83",
+   "id": "a2b020f1",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7fdc6b9f",
+   "id": "d98c0cda",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3ad7d772",
+   "id": "4cb0eff0",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b7019e4d",
+   "id": "1f5c8dbd",
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "69fab116",
+   "execution_count": 97,
+   "id": "8aff1baa",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
      "output_type": "stream",
      "text": [
       "Enter a word: kilo\n",
-      "iloay\n"
+      "ilokay\n"
      ]
     }
    ],
@@ -381,13 +381,13 @@
     "    print(w+'way')\n",
     "else:\n",
     "\n",
-    "    print(w[1:]+'ay')"
+    "    print(w[1:]+w[0]+'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf529ad",
+   "id": "99305639",
    "metadata": {},
    "outputs": [],
    "source": []
