--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ef01e073",
+   "id": "f7168d8e",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "639f561a",
+   "id": "87db53c1",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fb7fbd4b",
+   "id": "defb8a52",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "cb128323",
+   "id": "c319685c",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1ae2efd5",
+   "id": "27a672fd",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "598c92b2",
+   "id": "211ff42f",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "a7254855",
+   "id": "dc1de59c",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "d3536457",
+   "id": "678c0120",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "573cce89",
+   "id": "611b73dd",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "1e8067f4",
+   "id": "e538738d",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "ba859b31",
+   "id": "5ebf324c",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b0efa4c8",
+   "id": "1a560a46",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b5712a67",
+   "id": "002ebf47",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "c7ab0339",
+   "id": "a9417613",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "030ece21",
+   "id": "157285f9",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "24cba037",
+   "id": "6e850b56",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "af4f4aca",
+   "id": "cafd6381",
    "metadata": {},
    "outputs": [
     {
@@ -697,40 +697,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "cbfa435c",
+   "execution_count": 137,
+   "id": "d2eacd9b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a string: apple\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'tuple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[135], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mabcdefghijklmnopqrstuvwxyz\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      2\u001b[0m user \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a string: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43ms\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m14\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms1 += \u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124mway\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers, not 'tuple'"
+      "Enter a string: apple\n",
+      "user_input + way\n"
      ]
     }
    ],
    "source": [
     "s = 'abcdefghijklmnopqrstuvwxyz'\n",
     "user_input = input('Enter a string: ')\n",
-    "if user_input[0] == 'a'\n",
-    "print ('s1 += \\'way\\'')"
+    "if (user_input[0] == 'a') or 'e' or 'i' or 'o' or 'u':\n",
+    "    print ('user_input + 'way')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb8b4fc1",
+   "id": "0ba2d522",
    "metadata": {},
    "outputs": [],
    "source": []
