--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bd1e9772",
+   "id": "052dd735",
    "metadata": {},
    "outputs": [
     {
@@ -213,32 +213,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "cd0fc2f2",
+   "execution_count": 64,
+   "id": "5ed6a608",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a wordahmed\n",
-      "ahmedway\n"
+      "Enter a word: cisco\n",
+      "iscocay\n"
      ]
     }
    ],
    "source": [
-    "word = input ('Enter a word')\n",
+    "word = input ('Enter a word: ')\n",
     "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] =='o' or word[0] == 'u':\n",
     "    print(f'{word + 'way'}')\n",
     "else:\n",
-    "    print word[1:]\n",
+    "    print(word[1:] + word[0] + 'ay')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c661d5f1",
+   "id": "17b1b385",
    "metadata": {},
    "outputs": [],
    "source": []
