--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e49c8e",
+   "id": "c974446e",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "83166712",
+   "id": "b1644059",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0e0c5a08",
+   "id": "babf8de2",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "260168aa",
+   "id": "78f15653",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d37500d5",
+   "id": "1b675337",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e43cfabc",
+   "id": "0815747b",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "52781a6d",
+   "id": "4036eeca",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c1886ac0",
+   "id": "1a06b20e",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4e94429d",
+   "id": "93c9998a",
    "metadata": {},
    "outputs": [
     {
@@ -286,22 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "c472b9a2",
+   "execution_count": 87,
+   "id": "080b6ef7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter a word papaya\n",
-      "apayapay\n"
+      "please enter a word computer\n",
+      "omputercay\n"
      ]
     }
    ],
    "source": [
     "word=input('please enter a word ')\n",
-    "if word[0] == 'a' or word[0] == 'e' or word[0] == \"i\" or word[0] == \"o\" or word[0] == \"u\":\n",
+    "if word[0] in 'aeiou':\n",
     "    print(f'{word + 'way'}')\n",
     "else:\n",
     "    print(f'{word[1:] + word[0] + \"ay\"}')\n",
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e3df8d1",
+   "id": "89904147",
    "metadata": {},
    "outputs": [],
    "source": []
