--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5bae1a8",
+   "id": "de51ab79",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bd28a589",
+   "id": "404cd9b7",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ac498c91",
+   "id": "50904a16",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49873f8",
+   "id": "823cbb00",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aad3699b",
+   "id": "a11f5af7",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bccf3540",
+   "id": "ca09731e",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e0eac5f9",
+   "id": "edb8f98e",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "45775a70",
+   "id": "6df65c55",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3677b147",
+   "id": "49ba359e",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "832d9529",
+   "id": "f874765e",
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "c214de9f",
+   "execution_count": 72,
+   "id": "94d6c9a1",
    "metadata": {},
    "outputs": [
     {
@@ -246,14 +246,14 @@
     "if txt1[0] in 'aeiou' :\n",
     "    txt1 = txt1 + 'way'\n",
     "else :\n",
-    "    txt1 = txt1[1:len(txt1)]+txt1[0]+'ay'\n",
+    "    txt1 = txt1[1:]+txt1[0]+'ay'\n",
     "print (txt1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a281daa",
+   "id": "b6785050",
    "metadata": {},
    "outputs": [],
    "source": [
