--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f7168d8e",
+   "id": "933c9a55",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "87db53c1",
+   "id": "41858a3b",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "defb8a52",
+   "id": "70100fc1",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c319685c",
+   "id": "0b0387d9",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "27a672fd",
+   "id": "35214e13",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "211ff42f",
+   "id": "dd812760",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "dc1de59c",
+   "id": "3fb14e5c",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "678c0120",
+   "id": "a5dc7b4a",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "611b73dd",
+   "id": "42696ded",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e538738d",
+   "id": "1566956a",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "5ebf324c",
+   "id": "476acc60",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "1a560a46",
+   "id": "4d17a3cc",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "002ebf47",
+   "id": "ce011504",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "a9417613",
+   "id": "fec1d6c8",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "157285f9",
+   "id": "3c095abc",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "6e850b56",
+   "id": "840ecc27",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "cafd6381",
+   "id": "a2a64e23",
    "metadata": {},
    "outputs": [
     {
@@ -697,8 +697,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "d2eacd9b",
+   "execution_count": 138,
+   "id": "0f96fec3",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
      "output_type": "stream",
      "text": [
       "Enter a string: apple\n",
-      "user_input + way\n"
+      "appleway\n"
      ]
     }
    ],
@@ -714,13 +714,13 @@
     "s = 'abcdefghijklmnopqrstuvwxyz'\n",
     "user_input = input('Enter a string: ')\n",
     "if (user_input[0] == 'a') or 'e' or 'i' or 'o' or 'u':\n",
-    "    print ('user_input + 'way')"
+    "    print (user_input + 'way')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba2d522",
+   "id": "8d698eb0",
    "metadata": {},
    "outputs": [],
    "source": []
