--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1b8da615",
+   "id": "dcf84670",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b4f345ca",
+   "id": "f8ca716c",
    "metadata": {},
    "outputs": [
     {
@@ -205,8 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "8c7697f0",
+   "execution_count": 64,
+   "id": "9f84b5eb",
    "metadata": {},
    "outputs": [
     {
@@ -214,14 +214,14 @@
      "output_type": "stream",
      "text": [
       "Write a word: orange\n",
-      "Your word in Pig latim would be: orangeway\n"
+      "orangeway\n"
      ]
     }
    ],
    "source": [
     "s = input('Write a word: ')\n",
     "if s[0] in 'aeiou':\n",
-    "    print(f'Your word in Pig latim would be: {s}')\n",
+    "    print(s + 'way')\n",
     "else:\n",
     "    s = s[1:]+s[0]+'ay'\n",
     "    print(f'Your word in Pig latim would be: {s}')"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d15716a",
+   "id": "223e62ae",
    "metadata": {},
    "outputs": [],
    "source": []
