--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "052dd735",
+   "id": "16350bcf",
    "metadata": {},
    "outputs": [
     {
@@ -213,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "5ed6a608",
+   "execution_count": 65,
+   "id": "1c8bc4e1",
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +228,8 @@
    ],
    "source": [
     "word = input ('Enter a word: ')\n",
-    "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] =='o' or word[0] == 'u':\n",
-    "    print(f'{word + 'way'}')\n",
+    "if word[0] in 'aeiou':\n",
+    "    print(word + 'way')\n",
     "else:\n",
     "    print(word[1:] + word[0] + 'ay')\n",
     "    "
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b1b385",
+   "id": "e7d7f717",
    "metadata": {},
    "outputs": [],
    "source": []
